PRAGMA foreign_keys=ON;
CREATE TABLE sources(source_id TEXT PRIMARY KEY,title TEXT NOT NULL,publisher TEXT NOT NULL,url TEXT NOT NULL,consulted_on TEXT NOT NULL,usage TEXT NOT NULL,limitations TEXT NOT NULL);
CREATE TABLE airports(iata TEXT PRIMARY KEY,icao TEXT NOT NULL,name TEXT NOT NULL,city TEXT NOT NULL,country TEXT NOT NULL,latitude REAL NOT NULL,longitude REAL NOT NULL,timezone TEXT NOT NULL,source_url TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'PUBLIC_REFERENCE');
CREATE TABLE operators(operator_id TEXT PRIMARY KEY,name TEXT NOT NULL,home_station TEXT NOT NULL REFERENCES airports(iata),data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE aircraft(aircraft_id TEXT PRIMARY KEY,operator_id TEXT NOT NULL REFERENCES operators(operator_id),tail_display TEXT NOT NULL,aircraft_type TEXT NOT NULL,config_code TEXT NOT NULL,base_station TEXT NOT NULL REFERENCES airports(iata),seat_capacity INTEGER NOT NULL CHECK(seat_capacity>0),data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE parts(part_id TEXT PRIMARY KEY,description TEXT NOT NULL,unit TEXT NOT NULL,reference_cost_eur REAL NOT NULL CHECK(reference_cost_eur>=0),hazmat INTEGER NOT NULL CHECK(hazmat IN(0,1)),data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE part_effectivity(effectivity_id TEXT PRIMARY KEY,part_id TEXT NOT NULL REFERENCES parts(part_id),operator_id TEXT NOT NULL REFERENCES operators(operator_id),aircraft_type TEXT NOT NULL,config_code TEXT NOT NULL,valid_from TEXT NOT NULL,valid_to TEXT NOT NULL,approval_reference TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE fault_catalog(fault_code TEXT PRIMARY KEY,ata_chapter TEXT NOT NULL,description TEXT NOT NULL,part_id TEXT NOT NULL REFERENCES parts(part_id),scope_note TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE providers(provider_id TEXT PRIMARY KEY,station TEXT NOT NULL REFERENCES airports(iata),name TEXT NOT NULL,contact_email TEXT NOT NULL,service_type TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE inventory_lots(lot_id TEXT PRIMARY KEY,operator_id TEXT NOT NULL REFERENCES operators(operator_id),part_id TEXT NOT NULL REFERENCES parts(part_id),station TEXT NOT NULL REFERENCES airports(iata),qty_on_hand INTEGER NOT NULL CHECK(qty_on_hand>=0),qty_reserved INTEGER NOT NULL CHECK(qty_reserved>=0 AND qty_reserved<=qty_on_hand),condition TEXT NOT NULL CHECK(condition IN('SERVICEABLE','QUARANTINE','UNSERVICEABLE')),release_doc_status TEXT NOT NULL CHECK(release_doc_status IN('VERIFIED','MISSING','PENDING')),release_doc_id TEXT,expiry_utc TEXT NOT NULL,owner_type TEXT NOT NULL,borrow_approved INTEGER NOT NULL CHECK(borrow_approved IN(0,1)),bin_location TEXT NOT NULL,last_verified_at TEXT NOT NULL,row_version INTEGER NOT NULL DEFAULT 1,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE engineers(engineer_id TEXT PRIMARY KEY,name TEXT NOT NULL,provider_id TEXT NOT NULL REFERENCES providers(provider_id),home_station TEXT NOT NULL REFERENCES airports(iata),employment_status TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE authorizations(authorization_id TEXT PRIMARY KEY,engineer_id TEXT NOT NULL REFERENCES engineers(engineer_id),operator_id TEXT NOT NULL REFERENCES operators(operator_id),aircraft_type TEXT NOT NULL,config_code TEXT NOT NULL,task_scope TEXT NOT NULL,station TEXT NOT NULL REFERENCES airports(iata),valid_from TEXT NOT NULL,valid_to TEXT NOT NULL,status TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE engineer_shifts(shift_id TEXT PRIMARY KEY,engineer_id TEXT NOT NULL REFERENCES engineers(engineer_id),station TEXT NOT NULL REFERENCES airports(iata),start_utc TEXT NOT NULL,end_utc TEXT NOT NULL,busy_until_utc TEXT NOT NULL,last_verified_at TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE tool_assets(tool_asset_id TEXT PRIMARY KEY,station TEXT NOT NULL REFERENCES airports(iata),tool_code TEXT NOT NULL,description TEXT NOT NULL,condition TEXT NOT NULL,calibration_expiry_utc TEXT NOT NULL,available_from_utc TEXT NOT NULL,last_verified_at TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE task_requirements(task_id TEXT PRIMARY KEY,fault_code TEXT NOT NULL REFERENCES fault_catalog(fault_code),aircraft_type TEXT NOT NULL,config_code TEXT NOT NULL,task_scope TEXT NOT NULL,tool_code TEXT NOT NULL,inspection_minutes INTEGER NOT NULL,resolution_minutes INTEGER NOT NULL,verification_minutes INTEGER NOT NULL,recording_minutes INTEGER NOT NULL,replacement_minutes INTEGER NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE flights(flight_id TEXT PRIMARY KEY,operator_id TEXT NOT NULL REFERENCES operators(operator_id),aircraft_id TEXT NOT NULL REFERENCES aircraft(aircraft_id),display_number TEXT NOT NULL,origin TEXT NOT NULL REFERENCES airports(iata),destination TEXT NOT NULL REFERENCES airports(iata),scheduled_out_utc TEXT NOT NULL,scheduled_in_utc TEXT NOT NULL,estimated_landing_utc TEXT NOT NULL,estimated_inblock_utc TEXT NOT NULL,other_turnaround_ready_utc TEXT NOT NULL,dispatch_buffer_minutes INTEGER NOT NULL,passengers INTEGER NOT NULL,crew_ready INTEGER NOT NULL,slot_confirmed INTEGER NOT NULL,status TEXT NOT NULL,source_basis TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC',CHECK(scheduled_out_utc<scheduled_in_utc));
CREATE TABLE defects(defect_id TEXT PRIMARY KEY,aircraft_id TEXT NOT NULL REFERENCES aircraft(aircraft_id),fault_code TEXT NOT NULL REFERENCES fault_catalog(fault_code),station TEXT NOT NULL REFERENCES airports(iata),reported_at TEXT NOT NULL,symptom_text TEXT NOT NULL,resolution_text TEXT NOT NULL,resolution_class TEXT NOT NULL,replaced_part_id TEXT REFERENCES parts(part_id),ground_minutes INTEGER NOT NULL,engineer_id TEXT NOT NULL REFERENCES engineers(engineer_id),status TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE work_orders(work_order_id TEXT PRIMARY KEY,defect_id TEXT NOT NULL REFERENCES defects(defect_id),task_reference TEXT NOT NULL,station TEXT NOT NULL REFERENCES airports(iata),started_at TEXT NOT NULL,completed_at TEXT NOT NULL,status TEXT NOT NULL,summary TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE open_deferrals(deferral_id TEXT PRIMARY KEY,aircraft_id TEXT NOT NULL REFERENCES aircraft(aircraft_id),review_reference TEXT NOT NULL,description TEXT NOT NULL,recorded_at TEXT NOT NULL,expires_at TEXT NOT NULL,status TEXT NOT NULL,interaction_review_required INTEGER NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE logistics_quotes(quote_id TEXT PRIMARY KEY,provider_id TEXT NOT NULL REFERENCES providers(provider_id),origin TEXT NOT NULL REFERENCES airports(iata),destination TEXT NOT NULL REFERENCES airports(iata),part_id TEXT NOT NULL REFERENCES parts(part_id),mode TEXT NOT NULL CHECK(mode IN('AIR','ROAD')),source_prep_minutes INTEGER NOT NULL,available_from_utc TEXT NOT NULL,cutoff_utc TEXT,departure_utc TEXT,arrival_utc TEXT,transit_minutes INTEGER NOT NULL,destination_handling_minutes INTEGER NOT NULL,cost_eur REAL NOT NULL,valid_until_utc TEXT NOT NULL,capacity_confirmed INTEGER NOT NULL,customs_ready INTEGER NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE fleet_status(aircraft_id TEXT PRIMARY KEY REFERENCES aircraft(aircraft_id),station TEXT NOT NULL REFERENCES airports(iata),available_from_utc TEXT NOT NULL,allocated_flight_id TEXT REFERENCES flights(flight_id),status TEXT NOT NULL,compatible_crew INTEGER NOT NULL,last_verified_at TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE communications(message_id TEXT PRIMARY KEY,operator_id TEXT NOT NULL REFERENCES operators(operator_id),sender TEXT NOT NULL,recipient TEXT NOT NULL,subject TEXT NOT NULL,received_at TEXT NOT NULL,body TEXT NOT NULL,trust_status TEXT NOT NULL,related_entity TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC');
CREATE TABLE documents(doc_id TEXT PRIMARY KEY,operator_id TEXT NOT NULL REFERENCES operators(operator_id),title TEXT NOT NULL,doc_type TEXT NOT NULL,aircraft_type TEXT NOT NULL,config_code TEXT NOT NULL,station TEXT NOT NULL,revision TEXT NOT NULL,valid_from TEXT NOT NULL,valid_to TEXT NOT NULL,status TEXT NOT NULL,trust_status TEXT NOT NULL,markdown_path TEXT NOT NULL,pdf_path TEXT NOT NULL,sha256 TEXT NOT NULL,data_class TEXT NOT NULL DEFAULT 'SYNTHETIC_NOT_FOR_MAINTENANCE');
CREATE TABLE doc_chunks(chunk_id TEXT PRIMARY KEY,doc_id TEXT NOT NULL REFERENCES documents(doc_id),ordinal INTEGER NOT NULL,section TEXT NOT NULL,content TEXT NOT NULL,page INTEGER NOT NULL);
CREATE VIRTUAL TABLE chunks_fts USING fts5(chunk_id UNINDEXED,section,content,tokenize='unicode61');
CREATE TABLE embeddings(chunk_id TEXT PRIMARY KEY REFERENCES doc_chunks(chunk_id),model TEXT NOT NULL,corpus_hash TEXT NOT NULL,vector_json TEXT NOT NULL);
CREATE TABLE cases(case_id TEXT PRIMARY KEY,operator_id TEXT NOT NULL REFERENCES operators(operator_id),aircraft_id TEXT NOT NULL REFERENCES aircraft(aircraft_id),event_id TEXT NOT NULL UNIQUE,event_hash TEXT NOT NULL,event_json TEXT NOT NULL,scenario_id TEXT NOT NULL,clock_utc TEXT NOT NULL,state TEXT NOT NULL,version INTEGER NOT NULL DEFAULT 1,plan_json TEXT,plan_hash TEXT,analysis_mode TEXT,created_at TEXT NOT NULL);
CREATE TABLE approvals(approval_id TEXT PRIMARY KEY,case_id TEXT NOT NULL REFERENCES cases(case_id),case_version INTEGER NOT NULL,plan_hash TEXT NOT NULL,actor TEXT NOT NULL,decision TEXT NOT NULL,created_at TEXT NOT NULL,idempotency_key TEXT NOT NULL UNIQUE);
CREATE TABLE reservations(reservation_id TEXT PRIMARY KEY,case_id TEXT NOT NULL REFERENCES cases(case_id),lot_id TEXT NOT NULL REFERENCES inventory_lots(lot_id),quantity INTEGER NOT NULL CHECK(quantity>0),status TEXT NOT NULL,created_at TEXT NOT NULL,expires_at TEXT NOT NULL,UNIQUE(case_id,lot_id));
CREATE TABLE outbox(message_id TEXT PRIMARY KEY,case_id TEXT NOT NULL REFERENCES cases(case_id),action TEXT NOT NULL,target TEXT NOT NULL,payload_json TEXT NOT NULL,status TEXT NOT NULL CHECK(status='SIMULATED_ONLY'),created_at TEXT NOT NULL);
CREATE TABLE audit(audit_id INTEGER PRIMARY KEY AUTOINCREMENT,recorded_at_utc TEXT NOT NULL,scenario_time_utc TEXT NOT NULL,actor TEXT NOT NULL,case_id TEXT,action TEXT NOT NULL,detail_json TEXT NOT NULL,previous_hash TEXT NOT NULL,entry_hash TEXT NOT NULL);
CREATE TRIGGER audit_no_update BEFORE UPDATE ON audit BEGIN SELECT RAISE(ABORT,'audit rows cannot be updated'); END;
CREATE TRIGGER audit_no_delete BEFORE DELETE ON audit BEGIN SELECT RAISE(ABORT,'audit rows cannot be deleted'); END;
CREATE INDEX idx_defects_aircraft_fault_time ON defects(aircraft_id,fault_code,reported_at);
CREATE INDEX idx_flights_aircraft_time ON flights(aircraft_id,scheduled_out_utc);
CREATE INDEX idx_inventory_part_station ON inventory_lots(part_id,station);
CREATE INDEX idx_authorizations_match ON authorizations(operator_id,aircraft_type,config_code,task_scope,station);
CREATE INDEX idx_docs_applicability ON documents(operator_id,aircraft_type,config_code,status,valid_from,valid_to);
